# sbsp

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  THIRD_PARTY_NOTICES.md  about.hbs  about.toml  cog.toml  mise.dev.toml  mise.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.cargo/: config.toml
.github/workflows/: build-release.yml  build-remote-release.yml  bump-version.yml  check-frontend-types.yml  check-license-notices.yml  check-pr-title.yml  deploy-docs.yml  deploy-update.yml  generate-notices.yml  release-draft-tauri.yml  release-draft.yml  update-publish.yml
docs/: 404.html  hashmap.json  index.html  installation.html
docs/assets/: app.C2NHEjKf.js  app.CzmlB2g4.js  app.DeAMtDKQ.js  app.Dg5OmCGE.js  app.ZOvRkYRT.js  index.md.BQm19QbA.lean.js  index.md.BtiemUjw.lean.js  index.md.CIycpt5j.js  index.md.Dahtsozj.lean.js  index.md.HbTG76EJ.js  index.md.y5hYrEVz.lean.js  installation.md.BDlUS_XM.js  installation.md.BDlUS_XM.lean.js  installation.md.BYUByjvu.js  installation.md.BYUByjvu.lean.js  installation.md.C4SJ4z95.js  installation.md.C4SJ4z95.lean.js  installation.md.Cc9nl-lz.js  installation.md.Cc9nl-lz.lean.js  installation.md.DiWIvvx_.js  installation.md.DiWIvvx_.lean.js  installation.md.ey3CJ4jq.js  installation.md.ey3CJ4jq.lean.js  style.24YGUUfl.css  style.BTmDk3wo.css  style.BnBeRUPX.css  style.TZnh6Gxa.css  style.mlASD2Es.css  usage_cues_audio.md.BtUoZBXE.js  usage_cues_audio.md.BtUoZBXE.lean.js  usage_cues_audio.md.CTemNbaT.js  usage_cues_audio.md.CTemNbaT.lean.js  usage_cues_audio.md.DRnTq2er.js  usage_cues_audio.md.DRnTq2er.lean.js  usage_cues_audio.md.ee7Phbm1.js  usage_cues_audio.md.ee7Phbm1.lean.js  usage_cues_fade.md.9MV2M5um.js  usage_cues_fade.md.9MV2M5um.lean.js  usage_cues_fade.md.CtZsxN_Q.js  usage_cues_fade.md.CtZsxN_Q.lean.js  (+62 more)
main/: latest.json
patches/: primevue.patch
remote/: latest.json
sbsp_app/: CHANGELOG.md  Cargo.toml  tauri.conf.json
sbsp_app/src/: main.rs  settings.rs
sbsp_backend/: CHANGELOG.md  Cargo.toml
sbsp_backend/src/: action.rs  api.rs  apiclient.rs  apiserver.rs  asset_processor.rs  controller.rs  engine.rs  event.rs  executor.rs  helper.rs  lib.rs  main.rs  manager.rs  model.rs
sbsp_backend/src/api/: auth.rs  client.rs  file_list.rs  server.rs
sbsp_backend/src/api/client/: file_list_handler.rs  service_entry.rs
sbsp_backend/src/asset_processor/: command.rs  data.rs  handle.rs
sbsp_backend/src/controller/: command.rs  handle.rs  state.rs
sbsp_backend/src/engine/: audio_engine.rs  pre_wait_engine.rs  wait_engine.rs
sbsp_backend/src/engine/audio_engine/: audio_soucre.rs  audio_source.rs  command.rs  event.rs  level_meter.rs  lowcost_skip.rs  mono.rs  mono_effect.rs  static_source.rs
sbsp_backend/src/engine/audio_engine/audio_source/: envelope.rs  volume.rs
sbsp_backend/src/engine/audio_engine/mono_effect/: builder.rs  handle.rs
sbsp_backend/src/engine/wait_engine/: command.rs  event.rs
sbsp_backend/src/executor/: command.rs  event.rs  tests.rs
sbsp_backend/src/manager/: command.rs  guard.rs  handle.rs  project.rs
sbsp_backend/src/model/: cue.rs  settings.rs
sbsp_backend/src/model/cue/: audio.rs  group.rs
sbsp_backend/src/model/settings/: hotkey.rs
sbsp_docs/: .gitignore  CHANGELOG.md  package.json  pnpm-lock.yaml
sbsp_docs/src/: index.md  installation.md
sbsp_frontend/: .gitignore  .oxfmtrc.json  .oxlintrc.json  .prettierrc.yml  CHANGELOG.md  env.d.ts  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  splashscreen.html  tsconfig.app.json  tsconfig.json  vite.config.ts
sbsp_frontend/src/: App.vue  ConnectView.vue  MainView.vue  (+12 more)
sbsp_license/: Cargo.toml
sbsp_license/src/: data.rs  lib.rs  main.rs
sbsp_remote/: Cargo.toml  build.rs  tauri.conf.json
sbsp_remote/capabilities/: default.json
sbsp_remote/icons/: icon.icns
sbsp_remote/src/: command.rs  lib.rs  main.rs  settings.rs
sbsp_remote/src/command/: client.rs  controller.rs  model_manager.rs  settings.rs
sbsp_remote/src/settings/: hotkey.rs  manager.rs  settings.rs
sbsp_remote_app/: CHANGELOG.md  Cargo.toml  tauri.conf.json
sbsp_tauri/: .prettierignore  Cargo.toml  build.rs  eslint.config.ts  index.html  package.json  pnpm-lock.yaml  tauri.conf.json  vite.config.ts
sbsp_tauri/capabilities/: default.json
sbsp_tauri/icons/: icon.icns
sbsp_tauri/src/: App.vue  MainView.vue  SettingsView.vue  command.rs  i18n.ts  lib.rs  main.rs  main.ts  router.ts  settings.rs  update.rs  utils.ts
sbsp_tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
sbsp_tauri/src-tauri/capabilities/: default.json
sbsp_tauri/src-tauri/src/: command.rs  lib.rs  main.rs
sbsp_tauri/src-tauri/src/command/: controller.rs  cue_controller.rs  model_manager.rs
sbsp_tauri/src/command/: controller.rs  license.rs  model_manager.rs  server.rs  settings.rs
sbsp_tauri/src/components/: BottomEditor.vue  CueList.vue  FootBar.vue  SideBar.vue  ToolHeader.vue
sbsp_tauri/src/components/editor/: AudioBasicEditor.vue  AudioEditor.vue  AudioTimeLevelEditor.vue  BasicEditor.vue  PanningFader.vue  VolumeFader.vue  WaveformViewer.vue
sbsp_tauri/src/components/input/: CurveViewer.vue  FadeParamInput.vue  HotkeyInput.vue  PanningFader.vue  TextInput.vue  TimeInput.vue  TimeRange.vue  VolumeFader.vue
sbsp_tauri/src/settings/: hotkey.rs  manager.rs
sbsp_tauri/src/stores/: assetResult.ts  showmodel.ts  showstate.ts  uisettings.ts  uistate.ts
sbsp_tauri/src/types/: ActiveCue.ts  AssetData.ts  AudioCueFadeParam.ts  AudioCueLevels.ts  AudioCueParam.ts  AudioFadeParam.ts  AudioStateParam.ts  Cue.ts  CueParam.ts  CueSequence.ts  Easing.ts  GeneralSettings.ts  HotkeySettings.ts  LoopRegion.ts  PlaybackHotkey.ts  PlaybackStatus.ts  ShowModel.ts  ShowSettings.ts  ShowState.ts  StateParam.ts  StatusParam.ts  TemplateSettings.ts  UiError.ts  UiEvent.ts
sbsp_tauri/src/types/event/: Easing.ts  UiEvent.ts
sbsp_tauri/src/types/model/: ShowModel.ts
sbsp_tauri/src/types/state/: ActiveCue.ts
scripts/: gen_notices.sh  notice_json2md.js
update/: latest-main.json  latest-remote.json
(+215 files in other folders)
