[workspace]
resolver = "3"
members = [
    "sbsp_backend",
    "sbsp_license",
    "sbsp_tauri",
    "sbsp_remote",
]

[workspace.package]
authors = ["Keinsleif"]
version = "1.0.1"
edition = "2024"
license = "Elastic-2.0"
publish = false

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[profile.dev.package."*"]
opt-level = 3