[workspace]
resolver = "3"
members = [
    "sbsp_backend",
    "sbsp_license",
    "sbsp_tauri",
    "sbsp_remote",
]

[workspace.package]
authors = ["Keinsleif"]
version = "1.2.1"
edition = "2024"
license = "Elastic-2.0"
publish = false

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[profile.dev.package.sbsp_backend]
opt-level = 3

[profile.dev.package.kira]
opt-level = 3

[profile.dev.package.cpal]
opt-level = 3

[profile.dev.package.symphonia]
opt-level = 3

[profile.dev.package.symphonia-codec-aac]
opt-level = 3

[profile.dev.package.symphonia-codec-adpcm]
opt-level = 3

[profile.dev.package.symphonia-bundle-flac]
opt-level = 3

[profile.dev.package.symphonia-codec-alac]
opt-level = 3

[profile.dev.package.symphonia-format-caf]
opt-level = 3

[profile.dev.package.symphonia-format-isomp4]
opt-level = 3

[profile.dev.package.symphonia-format-mkv]
opt-level = 3

[profile.dev.package.symphonia-bundle-mp3]
opt-level = 3

[profile.dev.package.symphonia-format-ogg]
opt-level = 3

[profile.dev.package.symphonia-codec-pcm]
opt-level = 3

[profile.dev.package.symphonia-format-riff]
opt-level = 3

[profile.dev.package.symphonia-codec-vorbis]
opt-level = 3
