[workspace]
resolver = "3"
members = [
    "sbsp_backend",
    "sbsp_license",
    "sbsp_app",
    "sbsp_remote_app",
]

[workspace.package]
authors = ["Keinsleif"]
edition = "2024"
license = "Elastic-2.0"
homepage = "https://keinsleif.github.io/sbsp/docs/"
repository = "https://github.com/Keinsleif/sbsp"
publish = false

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true # Ensures debug symbols are removed.

[profile.dev.package]
sbsp_backend.opt-level = 3
ebur128.opt-level = 3
rtrb.opt-level = 3
rodio.opt-level = 3
cpal.opt-level = 3
symphonia.opt-level = 3
symphonia-core.opt-level = 3
symphonia-utils-xiph.opt-level = 3
symphonia-bundle-flac.opt-level = 3
symphonia-bundle-mp3.opt-level = 3
symphonia-codec-aac.opt-level = 3
symphonia-codec-adpcm.opt-level = 3
symphonia-codec-alac.opt-level = 3
symphonia-codec-pcm.opt-level = 3
symphonia-codec-vorbis.opt-level = 3
symphonia-format-caf.opt-level = 3
symphonia-format-isomp4.opt-level = 3
symphonia-format-mkv.opt-level = 3
symphonia-format-ogg.opt-level = 3
symphonia-format-riff.opt-level = 3

[profile.release.package]
sbsp_backend.opt-level = 3
ebur128.opt-level = 3
rtrb.opt-level = 3
rodio.opt-level = 3
cpal.opt-level = 3
symphonia.opt-level = 3
symphonia-core.opt-level = 3
symphonia-utils-xiph.opt-level = 3
symphonia-bundle-flac.opt-level = 3
symphonia-bundle-mp3.opt-level = 3
symphonia-codec-aac.opt-level = 3
symphonia-codec-adpcm.opt-level = 3
symphonia-codec-alac.opt-level = 3
symphonia-codec-pcm.opt-level = 3
symphonia-codec-vorbis.opt-level = 3
symphonia-format-caf.opt-level = 3
symphonia-format-isomp4.opt-level = 3
symphonia-format-mkv.opt-level = 3
symphonia-format-ogg.opt-level = 3
symphonia-format-riff.opt-level = 3
