[package]
name = "sbsp_backend"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "apiserver"
path = "src/main.rs"
required-features = ["backend", "apiserver"]

[features]
default = ["backend"]
backend = [
    "dep:tokio",
    "dep:serde_json",
    "dep:kira",
    "dep:symphonia",
    "dep:log",
    "dep:anyhow",
    "dep:ebur128",
    "apiserver"
]
apiserver = [
    "dep:tokio",
    "dep:axum",
    "dep:env_logger",
    "dep:libmdns",
    "dep:gethostname",
    "dep:serde_json"
]
apiclient = [
    "dep:tokio",
    "dep:reqwest",
    "dep:reqwest-websocket",
    "dep:futures-util",
    "dep:serde_json",
]
type_export = ["dep:ts-rs"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1.17.0", features = ["serde", "v4", "v7"] }
tokio = { version = "1", features = ["full"], optional = true }
serde_json = { version = "1.0", optional = true }
kira = { path = "../../kira/crates/kira", features = ["serde"], optional = true }
symphonia = { version = "0.5.4", features = ["all"], optional = true }
log = { version = "0.4.27", optional = true }
anyhow = { version = "1.0.98", optional = true }
ebur128 = { version = "0.1.10", optional = true }

env_logger = { version = "0.11.8", optional = true }
axum = { version = "0.8.4", features = ["ws"], optional = true }
libmdns = { version = "0.10.1", optional = true }
gethostname = { version = "1.0.2", optional = true }

reqwest = { version = "0.12.23", features = ["json"], optional = true }
reqwest-websocket = { version = "0.5.1", optional = true }
futures-util = { version = "0.3.31",default-features = false, features = ["sink"], optional = true }

ts-rs = { version = "11.0.1", features = ["uuid-impl"], optional = true }
