[package]
name = "sbsp_backend"
version = "0.3.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "apiserver"
path = "src/main.rs"
required-features = ["backend", "apiserver", "cli"]

[features]
default = ["backend"]
backend = [
    "dep:tokio",
    "dep:serde_json",
    "dep:kira",
    "dep:symphonia",
    "dep:log",
    "dep:anyhow",
    "dep:ebur128",
    "dep:async-recursion"
]
apiserver = [
    "backend",
    "dep:axum",
    "dep:rand",
    "dep:base64",
    "dep:sha2",
    "dep:mdns-sd",
    "dep:gethostname",
    "dep:serde_json",
]
apiclient = [
    "backend",
    "dep:reqwest",
    "dep:reqwest-websocket",
    "dep:futures-util",
    "dep:rand",
    "dep:base64",
    "dep:sha2",
    "dep:mdns-sd",
    "dep:gethostname",
    "dep:serde_json",
]
cli = ["dep:env_logger"]
type_export = []

[dependencies]
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
indexmap = { version = "2", features = ["serde"] }
log = { version = "0.4", optional = true }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "time", "macros", "sync", "fs", "signal"], optional = true }
serde_json = { version = "1.0", optional = true }
kira = { version = "0.11.0", features = ["serde"], optional = true }
symphonia = { version = "0.5.4", features = ["all"], optional = true }
anyhow = { version = "1.0", optional = true }
ebur128 = { version = "0.1.10", optional = true }
async-recursion = { version = "1.1.1", optional = true }

env_logger = { version = "0.11.8", optional = true }

rand = { version = "0.9.2", optional = true }
base64 = { version = "0.22.1", optional = true }
sha2 = { version = "0.10", optional = true }
mdns-sd = { version = "0.17", optional = true, default-features = false, features = ["async"]}
gethostname = { version = "1.0.2", optional = true }

axum = { version = "0.8", features = ["ws"], optional = true }

reqwest = { version = "0.13", features = ["json"], optional = true }
reqwest-websocket = { version = "0.5", optional = true }
futures-util = { version = "0.3.31",default-features = false, features = ["sink"], optional = true }

ts-rs = { version = "11", features = ["uuid-impl", "indexmap-impl"] }

[dev-dependencies]
tempfile = "3.22.0"
