[package]
name = "sbsp_license"
version = "0.1.1"
description = "A license management library & toolkit for SBS Player."
authors.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

[[bin]]
name = "gen_license"
path = "src/main.rs"
required-features = ["clap"]

[dependencies]
ed25519-dalek = { version = "2.2.0", features = ["pem"]}
base64 = "0.22.1"
anyhow = "1"
serde_json = "1"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1", features = ["serde", "v4"] }
clap = { version = "4.5.53", features = ["derive"], optional = true }
ts-rs = { version = "11", features = ["uuid-impl"], optional = true }

[features]
clap = ["dep:clap"]
ts-rs = ["dep:ts-rs"]
