[package]
name = "sbsp_tauri"
description = "A SBS Player Frontend App powered by tauri."
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
publish.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sbsp_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
sbsp_backend = { path = "../sbsp_backend", features = ["type_export"], default-features = false}
sbsp_license = { path = "../sbsp_license", features = ["ts-rs"] }
ts-rs = { version = "11" }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-log = { version = "2", features = ["colored"] }
tauri-plugin-os = "2"
humantime = "2.3.0"
sbsp_backend = { path = "../sbsp_backend", features = ["apiserver"] }
sbsp_license = { path = "../sbsp_license" }
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "fs"] }
uuid = { version = "1", features = ["serde", "v4", "v7"] }
log = "0.4"
anyhow = "1.0"
serde_json = "1.0"
serde = { version = "1" }
thiserror = "2"
ts-rs = { version = "11" }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
