[package]
name = "sbsp_tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sbsp_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
sbsp_backend = { path = "../../sbsp_backend", features = ["type_export"] }
ts-rs = { version = "11.0.1" }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sbsp_backend = { path = "../../sbsp_backend" }
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.17.0", features = ["serde", "v4", "v7"] }
ts-rs = "11.0.1"
tauri-plugin-dialog = "2"
env_logger = "0.11.8"
log = "0.4.27"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-window-state = "2"
